tests/baselines/reference/staticPropertyNotInStructType_basic.errors.txt
tests/cases/conformance/basicStructs/members_basic/structTypes_basic/staticPropertyNotInStructType_basic.ts(17,16): error TS2339: Property 'foo' does not exist on type 'C'.
tests/cases/conformance/basicStructs/members_basic/structTypes_basic/staticPropertyNotInStructType_basic.ts(18,16): error TS2339: Property 'bar' does not exist on type 'C'.
tests/cases/conformance/basicStructs/members_basic/structTypes_basic/staticPropertyNotInStructType_basic.ts(22,2): error TS2323: Type 'unknown' is not assignable to type 'C'.
tests/cases/conformance/basicStructs/members_basic/structTypes_basic/staticPropertyNotInStructType_basic.ts(22,9): error TS2339: Property 'fn' does not exist on type 'typeof C'.
tests/cases/conformance/basicStructs/members_basic/structTypes_basic/staticPropertyNotInStructType_basic.ts(34,21): error TS8002: Static members cannot reference struct type parameters.
tests/cases/conformance/basicStructs/members_basic/structTypes_basic/staticPropertyNotInStructType_basic.ts(43,16): error TS2339: Property 'foo' does not exist on type 'C<number, string>'.
tests/cases/conformance/basicStructs/members_basic/structTypes_basic/staticPropertyNotInStructType_basic.ts(44,16): error TS2339: Property 'bar' does not exist on type 'C<number, string>'.


==== tests/cases/conformance/basicStructs/members_basic/structTypes_basic/staticPropertyNotInStructType_basic.ts (7 errors) ====
    
    module NonGeneric {
        struct C {
            fn() { return this; }
            /* static get x() { return 1; }
            static set x(v) { } */
            constructor(public a: number, private b: number) { }
            static foo: string; // not reflected in struct type
        }
    
        module C {
            export var bar = ''; // not reflected in struct type
        }
    
        var c = new C(1, 2);
        var r = c.fn();
        var r4 = c.foo; // error
                   ~~~
!!! error TS2339: Property 'foo' does not exist on type 'C'.
        var r5 = c.bar; // error
                   ~~~
!!! error TS2339: Property 'bar' does not exist on type 'C'.
        //var r6 = c.x; // error
    
    	var cs: typeof C;
    	r = cs.fn(); // error
    	~
!!! error TS2323: Type 'unknown' is not assignable to type 'C'.
    	       ~~
!!! error TS2339: Property 'fn' does not exist on type 'typeof C'.
    	r4 = cs.foo; // ok
    	r5 = cs.bar; // ok
    	//r6 = cs.x; // ok
    }
    
    module Generic {
        struct C<T, U> {
            fn() { return this; }
            /* static get x() { return 1; }
            static set x(v) { } */
            constructor(public a: T, private b: U) { }
            static foo: T; // not reflected in struct type
                        ~
!!! error TS8002: Static members cannot reference struct type parameters.
        }
    
        module C {
            export var bar = ''; // not reflected in struct type
        }
    
        var c = new C(1, '');
        var r = c.fn();
        var r4 = c.foo; // error
                   ~~~
!!! error TS2339: Property 'foo' does not exist on type 'C<number, string>'.
        var r5 = c.bar; // error
                   ~~~
!!! error TS2339: Property 'bar' does not exist on type 'C<number, string>'.
        //var r6 = c.x; // error
    }